# Logo

./: .gitignore  CMakeLists.txt  README.txt  main.cpp  qt_requirements.txt
gtest/googlemock/docs/: cook_book.md
gtest/googletest/: README.md
gtest/googletest/docs/: advanced.md  pkgconfig.md
gtest/googletest/include/gtest/: gtest-death-test.h  gtest-param-test.h
gtest/googletest/src/: gtest-death-test.cc
qrc/: main.qml  tkom.qrc
src/GUI/DrawingController/: DrawingController.cpp  DrawingController.h
src/GUI/InputController/: InputController.cpp  InputController.h
src/Interpreter/: CallContext.cpp  CallContext.h  Interpreter.cpp  Interpreter.h  Scope.cpp  Scope.h  ScopeStack.cpp  ScopeStack.h
src/Interpreter/Exception/: InterpreterException.h
src/Interpreter/IOController/: IOController.cpp  IOController.h
src/Interpreter/OperationExecutors/: AndExecutor.h  Caster.h  DivisionExecutor.h  EqualityExecutor.h  GreaterExecutor.h  GreaterOrEqualExecutor.h  LessExecutor.h  LessOrEqualExecutor.h  MultiplicationExecutor.h  OrExecutor.h  SubtractionExecutor.h  SumExecutor.h
src/Interpreter/StandardLibrary/: Backward.cpp  Backward.h  Circle.cpp  Circle.h  Clear.cpp  Clear.h  Forward.cpp  Forward.h  Read.cpp  Read.h  Reset.cpp  Reset.h  STD.h  Switch.cpp  Switch.h  Turn.cpp  Turn.h  Write.cpp  Write.h
src/Lexical/Exceptions/: LexicalException.h
src/Lexical/Lexer/: Lexer.cpp  Lexer.h
src/Lexical/Token/: Token.cpp  Token.h  TokenType.h
src/Parsing/: Parser.cpp  Parser.h
src/Parsing/Exceptions/: ParserException.h
src/Program/: Program.cpp  Program.h  Statement.h
src/Program/LanguageElements/: Arguments.cpp  Arguments.h  Block.cpp  Block.h  ForEachLoop.cpp  ForEachLoop.h  FunctionBody.cpp  FunctionBody.h  FunctionCall.cpp  FunctionCall.h  FunctionDefinition.cpp  FunctionDefinition.h  If.cpp  If.h  Label.cpp  Label.h  LanguageElement.cpp  LanguageElement.h  LanguageElementVisitor.h  ListOfAssignable.cpp  ListOfAssignable.h  RepeatLoop.cpp  RepeatLoop.h  Return.cpp  Return.h  VariableAssignment.cpp  VariableAssignment.h  VariableDeclaration.cpp  VariableDeclaration.h  WhileLoop.cpp  WhileLoop.h
src/Program/LanguageElements/Logical/: AndCondition.cpp  AndCondition.h  Comparison.cpp  Comparison.h  EqualityCondition.cpp  EqualityCondition.h  LogicalElement.cpp  LogicalElement.h  NegatedLogicalElement.cpp  NegatedLogicalElement.h  OrCondition.cpp  OrCondition.h  RelationType.h  RelationalCondition.cpp  RelationalCondition.h
src/Program/LanguageElements/Math/: AdditiveExpression.cpp  AdditiveExpression.h  AdditiveOperator.cpp  AdditiveOperator.h  MathElement.cpp  MathElement.h  MultiplyExpression.cpp  MultiplyExpression.h  MultiplyOperator.cpp  MultiplyOperator.h  NegatedMathElement.cpp  NegatedMathElement.h  OperationType.h
src/Program/LanguageElements/Variables/: Assignable.cpp  Assignable.h  Bool.cpp  Bool.h  Evaluator.h  Label.cpp  Label.h  List.cpp  List.h  ListOfVariantValues.cpp  ListOfVariantValues.h  Number.cpp  Number.h  String.cpp  String.h  VariantValue.cpp  VariantValue.h
src/Source/: Position.h  SourceInterface.h
src/Source/QTextStream/: QTextStreamSource.cpp  QTextStreamSource.h
src/Source/StringStream/: StringStreamSource.cpp  StringStreamSource.h
src/Source/TextSource/: TextSource.cpp  TextSource.h
test/Lexer/: multiple_tokens_test.cpp  single_tokens_test.cpp
test/Parser/: LanguageElementVisitorMock.h  parser_test.cpp
test/Source/: string_source_test.cpp
test/Token/: token_test.cpp
